--- a/samples/ControlCatalog/Pages/TextBlockPage.xaml
+++ b/samples/ControlCatalog/Pages/TextBlockPage.xaml
@@ -2,6 +2,7 @@
              xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <StackPanel>
+    <TextBlock CharacterCasing="Upper" FontSize="50">SiMon</TextBlock>
     <TextBlock Classes="h2">A control that can display text</TextBlock>
     <WrapPanel MaxWidth="680"
                Margin="-10,0"
